--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "engines" : {
-    "node" : ">6.0.0" }
+    "node" : ">6.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
